; ModuleID = '/home/carl/AnghaBench/8cc/extr_main.c_parse_f_arg.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_main.c_parse_f_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"dump-ast\00", align 1
@dumpast = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"dump-stack\00", align 1
@dumpstack = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [15 x i8] c"no-dump-source\00", align 1
@dumpsource = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @parse_f_arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_f_arg(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @strcmp(i8* %3, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 1, i32* @dumpast, align 4
  br label %21

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @strcmp(i8* %8, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %7
  store i32 1, i32* @dumpstack, align 4
  br label %20

12:                                               ; preds = %7
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @strcmp(i8* %13, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %12
  store i32 0, i32* @dumpsource, align 4
  br label %19

17:                                               ; preds = %12
  %18 = call i32 @usage(i32 1)
  br label %19

19:                                               ; preds = %17, %16
  br label %20

20:                                               ; preds = %19, %11
  br label %21

21:                                               ; preds = %20, %6
  ret void
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @usage(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
